sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value getNombreValeur
var l = getNombreValeur
        ^AlgBubbleSort1:8: error: not enough arguments for method isNext: (a: Int, b: Int)Unit.
Unspecified value parameters a, b.
	isNext ()
               ^AlgBubbleSort1:17: error: not found: value then
if (a>b) then {echange (a,b)}
         ^